# plasma-next

./: .gitignore  LICENSE-MIT  README.md
contracts/: .dockerignore  .editorconfig  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  .solhint.json  Dockerfile  README.md  hardhat.config.ts  package-lock.json  package.json  test-accounts.ts  tsconfig.build.json  tsconfig.json
contracts/contracts/block-manager/: BlockManager.sol  IBlockManager.sol
contracts/contracts/common-interface/: IAdditionalZKPTLC.sol  IAsset.sol  ILeaf.sol  IMerkleProof.sol  IPayment.sol  IPublicInputs.sol  IState.sol  ITransfer.sol  IZKPTLC.sol
contracts/contracts/config/: Config.sol  IConfig.sol
contracts/contracts/halo2-verifier/: Halo2Verifier.sol  Halo2VerifyingKey.sol  IHalo2Verifier.sol
contracts/contracts/liquidity-manager/: ILiquidityManager.sol  LiquidityManager.sol
contracts/contracts/root-manager/: IRootManager.sol  RootManager.sol
contracts/contracts/test/: MockHalo2Verifier.sol  TestAdditionalZKPTLC.sol  TestAssetLib.sol  TestBlockManager2.sol  TestBlockManager3.sol  TestBlockManager4.sol  TestConfig2.sol  TestGetBlockHash.sol  TestHalo2Verifier.sol  TestLeafLib.sol  TestLiquidityManager2.sol  TestLiquidityManager3.sol  TestLiquidityManager4.sol  (+13 more)
contracts/scripts/: deployContracts.ts  deployTestContracts.ts  deployTokens.ts  getTokenAddresses.ts  upgradeRootManager.ts
contracts/test/: test-utils.ts
contracts/zkptlc-examples/: AtomicSwap.sol
halo2-server/: Cargo.toml  Halo2Verifier.sol  Halo2VerifyingKey.sol  README.md
halo2-server/src/: api.rs  main.rs  snark_processor.rs  state.rs
zkp/: .gitignore  Cargo.toml  README.md
zkp/src/: constants.rs  lib.rs  main.rs
zkp/src/api/: api.rs  io.rs  mod.rs  state.rs
zkp/src/base_circuits/: block_tree_circuit.rs  mod.rs  spent_circuit.rs  validity_circuit.rs  withdraw_circuit.rs
zkp/src/common/: address.rs  asset.rs  block.rs  extended_block_number.rs  mod.rs  transfer.rs  transfer_info.rs
zkp/src/processors/: block_io.rs  block_processor.rs  mod.rs  settlement_processor.rs  wrap_processor.rs
zkp/src/random/: blocks.rs  etmp.rs  mod.rs  transfers.rs  utils.rs  withdraw.rs  withdraw_proof.rs
zkp/src/serialization/: mod.rs  serialized_hashout.rs  serialized_proof.rs  serialized_transfer_info.rs
zkp/src/tree_circuits/: dynamic_leafable.rs  dynamic_tree_circuit.rs  evidence_leaf.rs  mod.rs  settlement_leaf_circuit.rs  settlement_tree_circuit.rs  tree_processor.rs  withdraw_leaf.rs
zkp/src/utils/: display.rs  dummy.rs  h256.rs  keccak.rs  leafable.rs  logic.rs  mod.rs  u256.rs
zkp/src/utils/trees/: get_root.rs  keylike.rs  merkle_tree.rs  merkle_tree_with_leaves.rs  mod.rs
zkp/src/wrap_circuits/: mod.rs  wrap.rs  wrap2.rs
(+51 files in other folders)
